--- a/src/modal.css
+++ b/src/modal.css
@@ -8,6 +8,7 @@
   left: 0;
   right: 0;
   color: #000;
-  background: rgba(255,255,255, .9);
+  background: rgba(255,255,255, .95);
   height: 100%;
+  z-index: 9999;
 }
