--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
 
 .home h2 {
   margin: 0;
+  text-align: center;
+  font-size: 1em;
+  letter-spacing: .09em;
 }
 
 .home-logo {
@@ -23,38 +26,53 @@
   padding: 10px;
   color: black;
   position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   z-index: 999;
+  width: 100%;
 }
 
-@media only screen and (min-width : 720px) {
-  .home-header {
-    position: relative;
-  }
-}
 .home-header ul {
   list-style: none;
   padding: 0;
-  display: flex;
-  align-items: center;
   text-transform: uppercase;
 }
 
 .home-header ul li {
   color: #000;
-  padding: 0 12px;
   font-weight: bold;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+@media only screen and (min-width : 720px) {
+  .home-header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .home h2 {
+    text-align: left;
+    font-size: 1.25em;
+  }
+
+  .home-header ul {
+    display: flex;
+    align-items: center;
+  }
+
+  .home-header ul li {
+    padding: 0 12px;
+    margin-bottom: 0;
+  }
 }
 
 .home-header ul li a {
   cursor: pointer;
+  font-size: .75em;
 }
 
 .home-header ul li.active a {
   border-bottom: 2px solid #000;
-
 }
 
 .home-intro {
@@ -62,9 +80,11 @@
 }
 
 .cabinet-container {
+  display: none;
+}
+.cabinet-container.active {
   display: block;
 }
-
 @media only screen and (min-width : 720px) {
   .cabinet-container {
     display: none;
