--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@
   position: relative;
 }
 
-.home h2 {
+.home a.wordmark {
+  border-bottom: 2px solid transparent;
+  cursor: pointer;
   margin: 0;
   text-align: center;
-  font-size: 1em;
+  font-size: 1.325em;
   letter-spacing: .09em;
 }
 
@@ -30,6 +32,10 @@
   width: 100%;
 }
 
+.home-header ul li a:hover {
+  border-bottom: 2px solid #000;
+}
+
 .home-header ul {
   list-style: none;
   padding: 0;
@@ -41,6 +47,11 @@
   font-weight: bold;
   text-align: center;
   margin-bottom: 5px;
+}
+
+.home-header ul li a {
+  color: #000;
+  text-decoration: none;
 }
 
 @media only screen and (min-width : 720px) {
@@ -82,21 +93,59 @@
 .cabinet-container {
   display: none;
 }
+
+.cabinet-container.home {
+  background: url(iowa.jpg) center center no-repeat;
+  background-size: cover;
+}
+
 .cabinet-container.active {
   display: block;
+  padding-top: 188px;
 }
+
 @media only screen and (min-width : 720px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 400%;
+  }
+  .container.one {
+    left: 0;
+    -webkit-transition: left .625s, -webkit-transform .625s;
+    transition: left .625s, transform .625s;
+  }
+  .container.two {
+
+    left: -100%;
+    -webkit-transition: left .625s, -webkit-transform .625s;
+    transition: left .625s, transform .625s;
+  }
+  .container.three {
+    left: -200%;
+    -webkit-transition: left .625s, -webkit-transform .625s;
+    transition: left .625s, transform .625s;
+  }
+  .container.four {
+    left: -300%;
+    -webkit-transition: left .625s, -webkit-transform .625s;
+    transition: left .625s, transform .625s;
+  }
   .cabinet-container {
-    display: none;
+    display: flex;
     align-items: stretch;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 100vh;
-    margin-top: -68px;
+
+    width: 25%;
+    height: calc(100vh - 68px);
   }
 
   .cabinet-container.active {
     display: flex;
+    padding-top: 0;
   }
 }
 
@@ -107,6 +156,7 @@
 .cabinet-arrows p {
   cursor: pointer;
   border: 2px solid #000;
+  background: #fff;
   letter-spacing: .09em;
   padding: 10px;
   position: absolute;
