--- a/src/cabinet.css
+++ b/src/cabinet.css
@@ -28,28 +28,40 @@
 }
 
 .cabinet .door-layer {
-  background: #ccc;
+  background: transparent;
 }
 
 .cabinet .top-layer {
-  background: url(cabinet.png) center center no-repeat;
-  background-size: cover;
+  border: 1px solid #000;
+  background: #fff;
   width: 100%;
   height: 100%;
 }
 
+.cabinet .top-layer::before {
+    content: '';
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    background: #fff;
+    border: 3px solid #000;
+    position: absolute;
+    font-size: 3em;
+    top: 45%;
+    right: 10%;
+}
 .cabinet .bottom-layer {
-  background: #ddd;
+  background: transparent;
 }
 
 .cabinet .bottom-layer .door {
-  background: url(door.png) center center no-repeat;
-  background-size: contain;
-  width: 100%;
+  /*background: #bbb;
+  border: 2px solid black;
+  width: 30%;
   position: absolute;
   top: 0;
-  left: -58%;
-  height: 100%;
+  left: -31%;
+  height: 100%;*/
 }
 
 .cabinet .door-layer.active {
